--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,10 @@ button p {
   background: #2d2559 !important;
 }
 
+.css-1km1ehz {
+  background: #2d2559 !important;
+}
+
 
 @media screen and (max-width: 992px) {
   .box {
